...
  ~     along with SaberApp.  If not, see <https://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/regDataFragment"
        android:name="omega.isaacbenito.saberapp.authentication.ui.RegDataFragment"
        android:label="RegDataFragment" >
        <action
            android:id="@+id/action_regDataFragment_to_regCentreFragment"
            app:destination="@id/regCentreFragment"
            app:enterAnim="@anim/slide_in_right"
...
