...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/submitLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_chain_margin"
                android:onClick="@{() -> viewModel.validateInput()}"
                android:padding="@dimen/editText_padding"
                android:text="@string/user_signIn"
...

            <TextView
                android:id="@+id/login_wrong_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/editText_padding"
                android:text="@string/wrong_credentials"
                android:textColor="@android:color/holo_red_light"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/login_account_mail" />

            <TextView
                android:id="@+id/newUser"
...
