...
                android:textStyle="bold"/>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/centre_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_reg_centre"
...
