<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_root"
    app:startDestination="@id/userFragment">


    <fragment
        android:id="@+id/userFragment"
        android:name="omega.isaacbenito.saberapp.UserFragment"
        android:label="fragment_user"
        tools:layout="@layout/fragment_user" />
</navigation>